# dtoa-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _config.yml  convert-results.cmake  generate-html.py  readme.md
result/: apple-m1-pro_mac64_clang17.0.csv  apple-m1-pro_mac64_clang17.0.html  corei7920@2.67_cygwin32_gcc4.8.html  corei7920@2.67_cygwin64_gcc4.8.html  corei7920@2.67_win32_vc2013.html  corei7920@2.67_win64_vc2013.html  template.php  unknown_mac32_clang7.0.html  unknown_mac64_clang10.0.html  unknown_mac64_clang12.0.html  unknown_mac64_clang7.0.html  unknown_unknown_gcc13.3.csv
results/: apple-m1-pro_mac64_clang17.0.csv  apple-m1-pro_mac64_clang17.0.html  apple-m1-pro_macos_clang17.0.csv  apple-m1-pro_macos_clang17.0.html  apple-m1-pro_macos_clang17.0_03adc84.csv  apple-m1-pro_macos_clang17.0_03adc84.html  apple-m1-pro_macos_clang17.0_03adc84.json  apple-m1-pro_macos_clang17.0_e0a03f7.csv  apple-m1-pro_macos_clang17.0_e0a03f7.html  apple-m1-pro_macos_clang17.0_f0f753f.csv  apple-m1-pro_macos_clang17.0_f0f753f.html  apple-m1-pro_macos_clang21.0.html  apple-m1-pro_macos_clang21.0.json  apple-m1-pro_macos_clang21.0_359383b.csv  apple-m1-pro_macos_clang21.0_359383b.html  apple-m1-pro_macos_clang21.0_359383b.json  apple-m1-pro_macos_clang21.0_45ff4d4.html  apple-m1-pro_macos_clang21.0_45ff4d4.json  apple-m1-pro_macos_clang21.0_f5b8cb5.csv  apple-m1-pro_macos_clang21.0_f5b8cb5.html  apple-m5-max_macos_clang21.0_ab145b9.html  apple-m5-max_macos_clang21.0_ab145b9.json  corei7920@2.67_cygwin32_gcc4.8.html  corei7920@2.67_win32_vc2013.csv  corei7920@2.67_win32_vc2013.html  corei7920@2.67_win32_vc2013.json  corei7920@2.67_win64_vc2013.html  epyc-7c13_linux_gcc13.3_ee50fc8.html  epyc-7c13_linux_gcc13.3_ee50fc8.json  epyc-genoa-processor_linux_gcc11.5_8e6015f.html  epyc-genoa-processor_linux_gcc11.5_8e6015f.json  epyc-milan-processor_linux_gcc11.5_69644a9.csv  epyc-milan-processor_linux_gcc11.5_69644a9.html  epyc-milan-processor_linux_gcc11.5_69644a9.json  generate_html.py  index.html  ryzen-threadripper-3960x_linux_gcc13.3_0d8bdc4.csv  ryzen-threadripper-3960x_linux_gcc13.3_0d8bdc4.html  ryzen-threadripper-3960x_linux_gcc13.3_a10220f.csv  ryzen-threadripper-3960x_linux_gcc13.3_a10220f.html  (+5 more)
src/: asteria-test.cc  asteria-test.cpp  benchmark.cc  benchmark.h  boosttest.cpp  cache-contention.cc  cache-pressure.cc  double-conversion-test.cc  double-conversion-test.cpp  dragonbox-test.cc  dragonbox_test.cpp  dtoa_puff.cpp  experimental-test.cc  fmt-test.cc  fmt-test.cpp  fmttest.cpp  fmttest_full.cpp  main.cpp  milo-test.cc  null-test.cc  null-test.cpp  ostringstream-test.cc  ostringstream-test.cpp  puff-test.cc  puff-test.cpp  resultfilename.h  ryu-test.cc  ryu-test.cpp  schubfach-test.cc  schubfach-test.cpp  sprintf-test.cc  sprintf-test.cpp  test.h  timer.h  to_chars-test.cc  to_chars-test.cpp  uscale-test.cc  xjb-test.cc  xjb-test.cpp  yy-test.cc  (+3 more)
src/milo/: dtoa_milo.h
src/schubfach/: schubfach.cc  schubfach.h
src/uscale/: uscale.c  uscale.h
src/xjb/: xjb64.cpp  xjb64.h
src/zmij/: zmij.cc  zmij.h
src/zmij2/: zmij.cc  zmij.h
